fix overflow in user info box

--- a/assets/sass/junction/_user-info-box.scss
+++ b/assets/sass/junction/_user-info-box.scss
@@ -91,6 +91,7 @@
 
   .user-description {
     padding: 5px;
+    overflow-wrap: break-word;
   }
 
   @include user-info-arrow("arrow-right", "right");
